--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^1.0.13",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/crypto-js": "^4.0.1",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.167",
     "@types/node": "^12.0.0",
@@ -16,6 +18,7 @@
     "@types/redux-logger": "^3.0.8",
     "antd": "^4.9.4",
     "axios": "^0.21.1",
+    "crypto-js": "^4.0.0",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
