--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "antd": "^4.9.4",
     "axios": "^0.21.1",
     "crypto-js": "^4.0.0",
+    "eslint-config-prettier": "^7.1.0",
+    "i18next": "^19.8.4",
+    "i18next-browser-languagedetector": "^6.0.1",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
