feat: 加了一些页面

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/crypto-js": "^4.0.1",
+    "@types/draft-js": "^0.10.44",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.167",
     "@types/node": "^12.0.0",
@@ -19,6 +20,7 @@
     "antd": "^4.9.4",
     "axios": "^0.21.1",
     "crypto-js": "^4.0.0",
+    "draft-js": "^0.11.7",
     "eslint-config-prettier": "^7.1.0",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
